--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
           <h2>HAPPY</h2>
 
-          <h4>| FROM DESPICABLE ME 2 |</h4>
+          <h4>| FROM <strong>DESPICABLE ME 2</strong> |</h4>
 
         </div>
       </div>
@@ -31,13 +31,14 @@
 
         <span>PHARRELLWILLIAMS.COM</span>
 
-        <img src=https://s3.amazonaws.com/learn-verified/columbia-logo.png alt="columbia-logo" -->
+        <img src=https://s3.amazonaws.com/learn-verified/columbia-logo.png alt="columbia-logo">
 
         <span>COLUMBIARECORDS.COM</span>
+        
+        <img src=https://s3.amazonaws.com/learn-verified/sony-logo.png alt =columbia-logo>
 
         <br>
 
-        <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
 
       </div>
     </div>
