--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 
         <span>PHARRELLWILLIAMS.COM</span>
 
-        <img src=https://s3.amazonaws.com/learn-verified/columbia-logo.png alt="columbia-logo">
+        <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png" alt="columbia-logo">
 
         <span>COLUMBIARECORDS.COM</span>
         
-        <img src=https://s3.amazonaws.com/learn-verified/sony-logo.png alt =columbia-logo>
+        <img src="https://s3.amazonaws.com/learn-verified/sony-logo.png" alt ="sony-logo">
 
         <br>
 
