automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <span>PHARRELLWILLIAMS.COM</span>
 
-        <img src="learn-verified/columbia-logo.png" alt="columbia-logo">
+        <img src="images/columbia-logo.png" alt="columbia-logo">
 
         <span>COLUMBIARECORDS.COM</span>
         
