automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <span>COLUMBIARECORDS.COM</span>
         
-        <img src="learn-verified/sony-logo.png" alt ="sony-logo">
+        <img src="images/sony-logo.png" alt ="sony-logo">
 
         <br>
 
